2007-04-17  J. Tang  <jtang@tresys.com>

	* Fixed potential segfault in seaudit_filter_set_date() when
	called using the same struct tm pointers that were returned by
	seaudit_filter_get_date().  The old code would dereference
	memory that was just free()d.

2007-04-16  J. Tang  <jtang@tresys.com>

	* apol_mls_range_get_levels() fixed so that its returned levels
	only include categories that are valid for the given policy.
	Before it just copied the categories for the high level, even if a
	lower level could not actually have one of those categories.

	* apol_mls_level_get_cats() now always returns categories in
	alphabetical order.

2007-04-06  J. Tang  <jtang@tresys.com>

	* Added seaudit_avc_message_get_name() and
	seaudit_sort_by_name().  seaudit now shows AVC messages' name
	field; this column may be be hidden through the updated
	preferences dialog.

	* Updated libqpol to use libsepol >= 2.0.0 if available.
	configure should be able to autodetect this.

2007-04-05  J. Tang  <jtang@tresys.com>

	* sediffx now allows the user to select which components to diff,
	rather than always diffing everything.

	* fix to domain transition analysis, where setexec rules might not
	be found correctly given certain policies.

2007-04-04  J. Tang  <jtang@tresys.com>

	* New configure option --enable-swig-java to enable build of Java
	SWIG wrappers.

2007-04-03  J. Mowery <jmowery@tresys.com>

	* Added apol_file_is_policy_path_list() to validate policy path
	  list files.

	* Added ability to specify policy path list files from command
	  line for all tools taking a policy as an argument.

2007-04-02  J. Mowery <jmowery@tresys.com>

	* Removed the "all_files" symbol from libsefs; this symbol was
	  previously marked as deprecated.

2007-03-29  J. Mowery <jmowery@tresys.com>

	* Libpoldiff SWIG wrapper added; wrapper treats all structures as
	  classes in the target language.

2007-03-28  J. Tang  <jtang@tresys.com>
