@@ -1,3 +1,9 @@
+2007-04-18  J. Mowery  <jmowery@tresys.com>
+
+	* The function apol_domain_trans_result_create_from_domain_trans_result()
+	  is now publicly exported. Also added is apol_domain_trans_result_destroy()
+	  to free memory used by duplicated results.
+
 2007-04-17  J. Tang  <jtang@tresys.com>
 
 	* Fixed potential segfault in seaudit_filter_set_date() when
